--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vagrant/avatar",
+    "name": "eric_qc/avatar",
     "description": "laravel avatar",
     "license": "MIT",
     "authors": [
