--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
           "Cxp\\Avatar\\": "src"
         }
       },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {}
 }
